# Chit-Fund

./: .gitattributes  .gitignore  .sac_token_address  .vercelignore  03-susu-chit-fund-savings-circle.md  LICENSE  README.md  vercel.json
.github/workflows/: ci.yml  vercel-deploy.yml
contracts/: Cargo.toml
contracts/penalty_handler/: Cargo.toml
contracts/penalty_handler/src/: lib.rs  test.rs
contracts/penalty_handler/test_snapshots/test/: test_dust_stays_in_handler.1.json  test_empty_recipients_rejected.1.json  test_happy_path_distributes_equally.1.json  test_init_stores_authorized_caller.1.json  test_unauthorized_caller_rejected.1.json  test_zero_amount_rejected.1.json
contracts/savings_circle/: Cargo.toml
contracts/savings_circle/src/: lib.rs  test.rs
contracts/savings_circle/test_snapshots/test/: test_already_won_member_cannot_win_again.1.json  test_circle_creation_locks_collateral.1.json  test_defaulter_is_slashed_and_removed.1.json  test_deposit_recorded_for_correct_member.1.json  test_non_member_cannot_deposit.1.json  test_round_closes_correctly.1.json  test_slashed_collateral_distributed_to_remaining.1.json  test_winner_receives_full_pot.1.json
docs/: ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  SECURITY.md  TESTING.md
docs/screenshots/: README.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: deploy-testnet.ps1  deploy-testnet.sh  run-contract-tests.ps1  run-contract-tests.sh  run-frontend-checks.ps1  run-frontend-checks.sh
(+42 files in other folders)
