[workspace]
resolver = "2"
members = [
    "penalty_handler",
    "savings_circle",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/susu-chit-fund"
authors = ["Susu Builders"]

[workspace.dependencies]
soroban-sdk = "26.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = true
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
